--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,42 +1,46 @@
 <div class="container">
- <div class="lead well">
-    <div clas="media">
-        <div class="media-left">
-            <a href="#">
-                <img class="media-object" src="<%= @question.gravatar %>">
-            </a>
-        </div>
-        <div class="media-body">
-            <h4 class="media-heading"><%= @question.email %> user@email.com asked:</h4
-            <%= @question.body %>
-        </div>    
-    </div>
- </div>
- <div class="row">
-    <div class="col-sm-8 col-sm*offset-2">
-        <div>
-            <button type="button" class="btn btn-success btn-sm" data-toggle="modal" data-target="#new-answer-modal">
-             Submit new Answer
-            </button>
-        </div>
-        
-        <%= render 'home/new_answer_form' %>
-        
-        <% @question.answers.each do |answer| %>
-        
-        <div clas="media">
-            <div class="media-left">
+        <div class="lead well">
+            <div class="media">
+              <div class="media-left">
                 <a href="#">
-                    <img class="media-object" src="<%= answer.gravatar %>">
+                  <img class="media-object" src="<%= @question.gravatar %>">
                 </a>
-             </div>
-            <div class="media-body">
-                <h4 class="media-heading"><%= answer.email %> answered:</h4>
-                <%= answer.body %>
-            </div>    
+              </div>
+              <div class="media-body">
+                <h4 class="media-heading"><%= @question.email %> asked:</h4>
+                <%= @question.body %> 
+              </div>
+            </div>
         </div>
-        
-        <% end %>
+        <div class="row">
+            <div class="col-sm-8 col-sm-offset-2">
+            
+                <div>
+                    <button type="button" class="btn btn-success btn-sm" data-toggle="modal" data-target="#new-answer-modal">
+                        Submit new Answer
+                    </button>
+                </div>
+                
+                <%= render 'home/new_answer_form' %>
+                
+                <% @question.answers.each do |answer| %>
+                <div class="media">
+                  <div class="media-left">
+                    <a href="#">
+                      <img class="media-object" src="<%= answer.gravatar %>">
+                    </a>
+                  </div>
+                  <div class="media-body">
+                    <h4 class="media-heading"><%= answer.email %> answered:</h4>
+                    <%= answer.body %> 
+                  </div>
+                  
+                </div>
+                <% end %>
+                
+                <% if @question.answers.empty? %>
+                    <div class="alert alert-info"> Nothing here yet, be the first to answer? </div>
+                <% end %>
+            </div>
+        </div
     </div>
-</div>
-</div>
